new option adhocracy:settings_override

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -100,6 +100,11 @@ sqlalchemy.url = postgresql://${postgres:dbuser}@localhost:${ports:postgres}/${p
 #Site name for all instances, part of the html <title>, notification E-Mails etc
 site.name = Adhocracy
 language = de_DE
+#custom adhocracy settings placed at the end of file (etc/adhocracy.ini)
+settings_override =
+    [logger_routes]
+    level = Debug
+
 #... read buildouts/adhocracy.cfg for more buildout options 
 #    or customize etc/adhocracy.ini.in 
 #    TODO: cleanup config files and doku 
