buildout_common: list all adhocracy options

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -101,13 +101,19 @@ sqlalchemy.url = postgresql://${postgres:dbuser}@localhost:${ports:postgres}/${p
 site.name = Adhocracy
 language = de_DE
 #custom adhocracy settings placed at the end of file (etc/adhocracy.ini)
+#read etc/adhocracy.ini to learn all options
 settings_override =
-    [logger_routes]
-    level = Debug
+#    [logger_routes]
+#    level = Debug
 
-#... read buildouts/adhocracy.cfg for more buildout options 
-#    or customize etc/adhocracy.ini.in 
-#    TODO: cleanup config files and doku 
+[twitter]
+username = 
+key = 
+secret = 
+consumer_key = 
+consumer_secret = 
+#Full path to a twitter profile, e.g. http://twitter.com/liqd_de
+profile_url = 
  
 ##############################################################################  
 # Override Versions and code
