--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -32,6 +32,7 @@ extends =
     buildouts/solr.cfg
     buildouts/rabbitmq.cfg
     buildouts/adhocracy.cfg
+    buildouts/apache.cfg
     buildouts/sysvinit.cfg
 # disable parts from included buildout files above
 parts -=
