make buildout_common_with_theming.cfg work; added buildouts/developtools.cfg

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,10 +1,12 @@
 #Custom buildout file to install adhocracy
 
 [buildout]
-#chose the buildout file to customize
+#Chose one buildout file to customize 
 extends = 
 #     buildout_common.cfg
+#     buildout_common_with_theming.cfg
      buildout_development.cfg
+#     buildout_development_with_theming.cfg
 
 #disable included buildout files that compile dependencies 
 extends -= 
