--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -24,9 +24,11 @@ socket_timeout = 3
 ##############################################################################  
  
 extends =
+# include buildout files to build adhocracy/dependencies
+# warning: changes cause buildout to recompile all stuff
     versions.cfg
     buildouts/base.cfg
-#    buildouts/postgres.cfg
+    buildouts/postgres.cfg
     buildouts/postgres_with_postgis.cfg
     buildouts/memcache.cfg
     buildouts/solr.cfg
@@ -34,7 +36,7 @@ extends =
     buildouts/adhocracy.cfg
     buildouts/apache.cfg
     buildouts/sysvinit.cfg
-# disable parts from included buildout files above
+# disable parts from included buildout files above 
 parts -=
 # add additional eggs
 eggs += 
@@ -52,7 +54,7 @@ rabbitmq = localhost
 [ports]
 main = 5001
 memcached = 5005 
-#WARNING rabbitmq also starts epmd (0.0.0.0:4369) and beam.smp on various ports
+# warning: rabbitmq also starts epmd (0.0.0.0:4369) and beam.smp on various ports
 rabbitmq =  5006
 rabbitmq_nodename = bunny1
 solr =  5007
