--- a/buildout_development_with_theming.cfg
+++ b/buildout_development_with_theming.cfg
@@ -1,14 +1,15 @@
 ##############################################################################  
-# Buildout to develop adhocracy (with dummy lamson mailserver)
+# Buildout to develop adhocracy with diazo theming and wordpress integration
 #
 ############################################################################## 
 
 [buildout]
-extends = 
-    buildout_common.cfg
-    buildouts/developtools.cfg
-    buildouts/codecheck.cfg
-    buildouts/mailserver.cfg
+extends =
+    buildout_common_with_theming.cfg
+#    buildout_common.cfg
+#    buildouts/developtools.cfg
+#    buildouts/codecheck.cfg
+#    buildouts/mailserver.cfg
 
 ##############################################################################  
 #Override settings from buildout_common.cfg    
