--- a/buildouts/sysvinit.cfg
+++ b/buildouts/sysvinit.cfg
@@ -4,7 +4,7 @@
 ##############################################################################
  
 [buildout]
-parts =
+parts +=
     env
     sysv_conf
 
