--- a/buildout_common_with_theming.cfg
+++ b/buildout_common_with_theming.cfg
@@ -5,6 +5,9 @@
 
 [buildout]
 extends = buildout_common.cfg
+parts += 
+    adhocracy_unthemed_conf
+
 eggs += 
     diazo
 # custom theme package based on the wordpressbasic_theme
@@ -18,10 +21,6 @@ eggs +=
 #The adhocracy diazo theme can merge content from this backend wordpress blog (URL).
 #The linked html page has to deliver proper xhtml content (<?xml encoding="utf-8">).
 blog = offenekommune.wordpress.liqd.net
-
-[ports]
-main = 5001
-supervisor = 5010
 
 ##############################################################################  
 # Additional server config without diazo themeing (etc/unthemed.ini
