added buildouts/adhocracy_setup_database.cfg to make setup the adhocracy database work again

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -34,6 +34,7 @@ extends =
     buildouts/solr.cfg
     buildouts/rabbitmq.cfg
     buildouts/adhocracy.cfg
+    buildouts/adhocracy_setup_database.cfg 
     buildouts/apache.cfg
     buildouts/sysvinit.cfg
 # disable parts from included buildout files above 
