--- a/buildouts/adhocracy.cfg
+++ b/buildouts/adhocracy.cfg
@@ -121,14 +121,14 @@ recipe = plone.recipe.command
 command = 
     chmod -R g+rw var/data
     ln -s parts/omelette installed_eggs
-    echo "\n######################################################"
-    echo "\nMANUEL STEP to initialize the adhocracy database:\n"
-    echo "start supervisord to start your databaseserver: $ bin/supervisord\n"
-    echo "run setup-app: $ bin/paster setup-app ${buildout:directory}/etc/adhocracy.ini --name=content\n"
-    echo "restart supervisor: $ bin/supervisorct reload\n"
-    echo "check that every service is running: bin/supervisorctl status\n"
-    echo "note the supervisord config: parts/supervisor/supervisor.conf\n"
-    echo "######################################################"
+#    echo "\n######################################################"
+#    echo "\nMANUEL STEP to initialize the adhocracy database:\n"
+#    echo "start supervisord to start your databaseserver: $ bin/supervisord\n"
+#    echo "run setup-app: $ bin/paster setup-app ${buildout:directory}/etc/adhocracy.ini --name=content\n"
+#    echo "restart supervisor: $ bin/supervisorct reload\n"
+#    echo "check that every service is running: bin/supervisorctl status\n"
+#    echo "note the supervisord config: parts/supervisor/supervisor.conf\n"
+#    echo "######################################################"
  
 ##############################################################################  
 # Set up supervisor to run it all
