--- a/buildouts/postgres_with_postgis.cfg
+++ b/buildouts/postgres_with_postgis.cfg
@@ -2,7 +2,7 @@
 # Buildout to install postgresql with postgis
 #
 # requires: 
-#    - actived python virtualenv shell
+#    - actived python virtualenv shell (to install gdal)
 #    - buildtools
 #    - Linux (the shapely part works only with Linux)
 #
