Add checkversions to development buildout
Checkversions allows to quickly find updated versions of dependencies.

Example usage:

bin/checkversions -v -l 0 versions.cfg

--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -26,6 +26,7 @@ parts +=
     sphinxbuilder
     instance 
     testrecorder 
+    checkversions
 
 # Pull und update each package to get the newest versions
 always-checkout = true
@@ -143,3 +144,8 @@ zcml =
 recipe = plone.recipe.command
 command = echo 'xdg-open "http:localhost:${instance:http-address}/++resource++recorder/index.html"' > bin/testrecorder.sh
           chmod a+x bin/testrecorder.sh
+
+[checkversions]
+recipe = zc.recipe.egg
+eggs = z3c.checkversions [buildout]
+
