--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -123,8 +123,8 @@ supervisor = 5010
 
 [urls]
 rabbitmq = http://www.rabbitmq.com/releases/rabbitmq-server/v2.5.1/rabbitmq-server-2.5.1.tar.gz
-libevent = http://www.monkey.org/~provos/libevent-1.4.8-stable.tar.gz
 solr = http://mirror.softaculous.com/apache/lucene/solr/3.6.2/apache-solr-3.6.2.tgz
+libevent = http://www.monkey.org/~provos/libevent-1.4.14b-stable.tar.gz
 memcached = http://memcached.googlecode.com/files/memcached-1.4.15.tar.gz
 
 ##############################################################################  
