use include-site-packages = false instead of virtualenv

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -18,7 +18,9 @@ auto-checkout = *
 newest = false
 #wait max seconds to download eggs
 socket_timeout = 3
- 
+#allow to use system python without added eggs
+include-site-packages = false
+
 ##############################################################################  
 # Include buildout files to install adhocracy and dependencies
 ##############################################################################  
