--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -17,6 +17,7 @@ eggs =
     diazo [wsgi]
     PILwoTK == 1.1.6.4
     adhocracy 
+    adhocracy.wordpressbasic_theme
     BeautifulSoup
     fanstatic
     ipdb
@@ -100,11 +101,13 @@ profile_url =
 ##############################################################################
 
 [adhocracy_code]
-branch =  develop
+branch = develop
+diazo_theme_rules_dir = ${buildout:directory}/src/adhocracy.wordpressbasic_theme/adhocracy/wordpressbasic_theme
 
 [sources]
-adhocracy = git https://github.com/liqd/adhocracy branch=${adhocracy_code:branch} update=false
-adhocracy.hhu_theme = git https://github.com/hhucn/adhocracy.hhu_theme update=false
+adhocracy = git https://github.com/liqd/adhocracy branch=${adhocracy_code:branch}
+adhocracy.wordpressbasic_theme = git https://github.com/liqd/adhocracy.wordpressbasic_theme
+adhocracy.adhocracy_theme = git https://github.com/liqd/adhocracy.adhocracy_theme
 
 [ports]
 main = 5001
