--- a/etc/adhocracy.ini.in
+++ b/etc/adhocracy.ini.in
@@ -181,11 +181,11 @@ adhocracy.instances.autojoin = feedback
 adhocracy.behind_proxy = ${parts.adhocracy.behind_proxy}
 
 # INSTALL: Store statistic information about requests in the database
-#adhocracy.requestlog_active = True
+adhocracy.requestlog_active = True
 # ... but don't log IP addresses ('dontlog', default)
 # ... but set the last 8 / 80 bits to zero ('anonymize')
 # -.. but log the full IP address ('none')
-#adhocracy.requestlog_ipanonymization = anonymize
+adhocracy.requestlog_ipanonymization = none
 
 # Statistics via Piwik
 piwik.site = 
