forbid users to include HTML (default to on)

--- a/etc/adhocracy.ini.in
+++ b/etc/adhocracy.ini.in
@@ -195,7 +195,8 @@ piwik.id =
 # If this option is set to false, we only allow markdown input.
 # If it is set, we make a best effort to filter unsafe HTML, but allow iframes
 # and other complex constructs.
-#adhocracy.allow_user_html = false
+adhocracy.allow_user_html = false
+
 
 # Show all instances on the frontpage
 adhocracy.startpage.instances.list_length = -1
