--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -41,7 +41,7 @@ parts =
     sysv_conf
     supervisor
 
-index = http://adhocracy-buildout.cs.uni-duesseldorf.de/eggproxy/
+#index = http://adhocracy-buildout.cs.uni-duesseldorf.de/eggproxy/
 
 ##############################################################################  
 # System Settings
