--- a/etc/adhocracy.ini.in
+++ b/etc/adhocracy.ini.in
@@ -110,7 +110,7 @@ adhocracy.language = ${parts.adhocracy.language}
 # INSTALL: The site directory contains your site modifications of Adhocracy 
 # (e.g. logos, CSS, html pages). A skeleton site directory will be created 
 # by the "setup-app" paster command. 
-adhocracy.site.dir = ${parts.buildout.directory}/src/adhocracy.hhu_theme/site_dir
+# adhocracy.site.dir = ${parts.buildout.directory}/src/adhocracy.hhu_theme/site_dir
 
 # INSTALL: Location of your custom client (overrides adhocracy defaults)
 adhocracy.client_location = ${parts.buildout.directory}/src/adhocracy.hhu_theme/
