--- a/etc/adhocracy.ini.in
+++ b/etc/adhocracy.ini.in
@@ -263,7 +263,7 @@ adhocracy.show_instance_overview_proposals = False
 adhocracy.hide_empty_categories_in_facet_list = True
 
 # Show global stats (user/proposal/comment count) on frontpage
-#adhocracy.stats_on_frontpage = true
+#adhocracy.show_stats_on_frontpage = true
 
 
 # Logging configuration
