check out hhu-merged by default

--- a/buildout_common.cfg
+++ b/buildout_common.cfg
@@ -102,7 +102,7 @@ profile_url =
 ##############################################################################
 
 [adhocracy_code]
-branch =  develop
+branch =  hhu-merged
 
 [sources]
 adhocracy = git https://github.com/liqd/adhocracy branch=${adhocracy_code:branch} update=false
