Configure default supervisord child process logging properly
This commit changes the default supervisord logging configuration as the
following:

* Do not delete child process logfiles on restart
* Redirect stderr to stdout (each of the processes only uses one of
both)
* Give the logfiles readable names

--- a/buildout_development.cfg
+++ b/buildout_development.cfg
@@ -90,11 +90,11 @@ output = ${buildout:directory}/etc/unthemed.ini
 
 [supervisor]
 programs =
-    0 rabbitmq ${buildout:directory}/bin/rabbitmq-server                 
-    20 memcached ${memcached:location}/bin/memcached [-l 127.0.0.1 -p ${ports:memcached} -U ${ports:memcached} -u nobody]
-    30 solr ${buildout:directory}/bin/solr-instance [fg]
-    40 adhocracy_background ${buildout:directory}/bin/paster [--plugin=adhocracy background -c ${buildout:directory}/etc/adhocracy.ini]
-#    45 adhocracy ${buildout:directory}/bin/paster [serve ${buildout:directory}/etc/adhocracy.ini]
+    0 rabbitmq (redirect_stderr=true stdout_logfile=var/log/rabbitmq.log) ${buildout:directory}/bin/rabbitmq-server                 
+    20 memcached (redirect_stderr=true stdout_logfile=var/log/memcached.log) ${memcached:location}/bin/memcached [-l 127.0.0.1 -p ${ports:memcached} -U ${ports:memcached}] 
+    30 solr (redirect_stderr=true stdout_logfile=var/log/solr.log) ${buildout:directory}/bin/solr-instance [fg]
+    40 adhocracy_background (redirect_stderr=true stdout_logfile=var/log/background.log) ${buildout:directory}/bin/paster [--plugin=adhocracy background -c ${buildout:directory}/etc/adhocracy.ini]
+#    45 adhocracy (redirect_stderr=true stdout_logfile=var/log/adhocracy.log) ${buildout:directory}/bin/paster [serve ${buildout:directory}/etc/adhocracy.ini]
 
 ##############################################################################  
 # Set up SysV init script
