Pin collective.recipe.sphinxbuilder to 1.0.7 (fixes liqd/adhocracy#221)

--- a/versions.cfg
+++ b/versions.cfg
@@ -57,6 +57,8 @@ collective.recipe.solrinstance = 3.8
 oauth = 1.0.1
 recaptcha-client = 1.0.6
 
+collective.recipe.sphinxbuilder = 1.0.7
+
 #buildout
 collective.recipe.grp = 1.1.0
 gocept.recipe.env = 1.0
