--- a/versions.cfg
+++ b/versions.cfg
@@ -57,7 +57,8 @@ collective.recipe.solrinstance = 3.8
 oauth = 1.0.1
 recaptcha-client = 1.0.6
 
-collective.recipe.sphinxbuilder = 0.7.1
+collective.recipe.sphinxbuilder = 0.7.3
+Sphinx = 1.1.3
 
 #buildout
 collective.recipe.grp = 1.1.0
